다이나믹 아일랜드 위치 수정

--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ body {
 	filter: drop-shadow(0 1em 2em hsla(0 0% 0%/var(--shadow-opacity, 0)));
 	transform: scale3d(0.375, 0.4, 1);
 	transform-origin: top;
-	top: 6px;
+	top: 1.1em;
 }
 
 .content {
